--- a/teams.html
+++ b/teams.html
@@ -19,7 +19,9 @@
         <a class="navbar-brand" href="index.html" style="font-size:1rem;"> Techequilla </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span>
+            <i class="fa fa-navicon" style="color:#00ace6; font-size:26px;"></i>
+            </span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
