Added Achievements Page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="navbar-nav ml-auto">
 
           <li class="nav-item">
-            <a class="nav-brand" href="#about">Achievements</a>
+            <a class="nav-brand" href="achievements.html">Achievements</a>
           </li>
 
           <li class="nav-item">
@@ -39,7 +39,7 @@
           <li class="nav-item">
             <a class="nav-brand" href="contact.html">Contact Us</a>
           </li>
-            
+
            <li class="nav-item">
              <a class="nav-brand" href="projects.html">Projects</a>
            </li>
