--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                    <a class="nav-brand" href="#about">Achievements</a>
+                    <a class="nav-brand" href="achievements.html">Achievements</a>
                 </li>
 
                 <li class="nav-item">
@@ -41,7 +41,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-brand" href="contactUs.html">Contact Us</a>
+                    <a class="nav-brand" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-brand" href="#">Projects</a>
