--- a/teams.html
+++ b/teams.html
@@ -28,7 +28,7 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                    <a class="nav-brand" href="#about">Achievements</a>
+                    <a class="nav-brand" href="achievements.html">Achievements</a>
                 </li>
 
                 <li class="nav-item">
@@ -40,7 +40,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-brand" href="contactUs.html">Contact Us</a>
+                    <a class="nav-brand" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-brand" href="projects.html">Projects</a>
